스프링 로그아웃 기능 추가

--- a/src/main/webapp/resources/css/global.css
+++ b/src/main/webapp/resources/css/global.css
@@ -10,6 +10,9 @@ textarea.form-control[readonly]{
 a{
  color: white;
 }
+/* a#signout{
+ color: black;
+} */
 a:hover{
   color: white;
   font-weight: bold;
